objects/Contact.object
<CustomObject>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>SO_SV__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <formula>HYPERLINK( Id ,  FirstName&amp;&quot; &quot;&amp; LastName   , &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRT_Bio__c</fullName>
        <description>Short biography of the person</description>
        <inlineHelpText>Short biography of the person (max 10,000 char)</inlineHelpText>
        <label>Bio</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>City and State of Contact</description>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GFS_CDSid__c</fullName>
        <label>GFS CDSid</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PRC_Notes__c</fullName>
        <description>Notes about the contact</description>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PRT_Known__c</fullName>
        <inlineHelpText>Is the person known in one market or globally?</inlineHelpText>
        <label>Known</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PRT_Advocate_Known</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRT_Notes__c</fullName>
        <inlineHelpText>Any relevant additional information</inlineHelpText>
        <label>Advocate Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SO_Jaguar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Jaguar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRC_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRT_Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PRT_Gender</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRT_Skills__c</fullName>
        <label>Skills</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PRT_Advocate_Skill</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Classic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Classic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Country__c</fullName>
        <label>Country</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Greeting__c</fullName>
        <formula>IF( ISBLANK(TEXT( Salutation )) , LastName,
IF( ISPICKVAL(Salutation, &apos;Other&apos;),
Salutation_Other__c &amp; &quot; &quot; &amp; LastName , TEXT(Salutation) &amp; &quot; &quot; &amp; LastName)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Greeting</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Interests__c</fullName>
        <label>Interests</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PRC_Instagram__c</fullName>
        <description>Instagram account of contact</description>
        <label>Instagram ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRC_Verticals__c</fullName>
        <description>Specific areas of concentration of the contact</description>
        <label>Verticals</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Broadcast</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Classic Automotive</fullName>
                </value>
                <value>
                    <fullName>Cooking / Food</fullName>
                </value>
                <value>
                    <fullName>CSR</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Embargo Contacts</fullName>
                </value>
                <value>
                    <fullName>Entertainment / Celebrity</fullName>
                </value>
                <value>
                    <fullName>Equestrian</fullName>
                </value>
                <value>
                    <fullName>EV</fullName>
                </value>
                <value>
                    <fullName>Fashion</fullName>
                </value>
                <value>
                    <fullName>Health &amp; Wellness</fullName>
                </value>
                <value>
                    <fullName>Holiday / Gifting</fullName>
                </value>
                <value>
                    <fullName>Luxury</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Men’s Interest</fullName>
                </value>
                <value>
                    <fullName>Military</fullName>
                </value>
                <value>
                    <fullName>Motorsports</fullName>
                </value>
                <value>
                    <fullName>Music</fullName>
                </value>
                <value>
                    <fullName>Newsdesks</fullName>
                </value>
                <value>
                    <fullName>Outdoor</fullName>
                </value>
                <value>
                    <fullName>Parenting</fullName>
                </value>
                <value>
                    <fullName>Stunts</fullName>
                </value>
                <value>
                    <fullName>Tech</fullName>
                </value>
                <value>
                    <fullName>Trade</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Women’s Interest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRT_Dog_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does the person own a dog(s)?</description>
        <inlineHelpText>Does the person own a dog(s)?</inlineHelpText>
        <label>Dog Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRT_Interests__c</fullName>
        <label>Interests</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PRT_Advocate_Interests</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Land_Rover__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Land Rover</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Magento_Id__c</fullName>
        <externalId>true</externalId>
        <label>Magento Id</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRC_Twitter_ID__c</fullName>
        <description>Twitter account of contact</description>
        <label>Twitter ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRT_Dual_Brand__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the person also an advocate of both JLR brands?</description>
        <inlineHelpText>Is the person also an advocate of both JLR brands?</inlineHelpText>
        <label>Dual Brand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRT_Equestrian__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does this person have regular involvement with horses?</description>
        <inlineHelpText>Does this person have regular involvement with horses?</inlineHelpText>
        <label>Equestrian</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRT_Has_Spouse__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does the person have a spouse?</description>
        <inlineHelpText>Does the person have a spouse?</inlineHelpText>
        <label>Has Spouse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRT_Profession__c</fullName>
        <label>Profession</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PRT_Advocate_Professions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRT_Weibo_Link__c</fullName>
        <description>URL link to the person&apos;s Weibo profile.</description>
        <inlineHelpText>URL link to the person&apos;s Weibo profile.</inlineHelpText>
        <label>Weibo Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SO_EnquiryView__c</fullName>
        <label>EnquiryView</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_SMS_Consent__c</fullName>
        <defaultValue>&apos;Unknown&apos;</defaultValue>
        <label>SMS Consent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SO_JLR_Marketing_Preferences</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <formula>Account.BillingStreet &amp; BR() &amp;
Account.BillingCity &amp; &quot;, &quot; &amp;
Account.BillingState &amp; &quot; &quot; &amp;
Account.BillingPostalCode &amp; BR() &amp;
Account.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRC_Facebook_ID__c</fullName>
        <description>Facebook account of contact</description>
        <label>Facebook ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRT_Agency_Name__c</fullName>
        <label>Agency Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRT_WeChat_Link__c</fullName>
        <description>URL link to the person&apos;s WeChat profile.</description>
        <inlineHelpText>URL link to the person&apos;s WeChat profile.</inlineHelpText>
        <label>WeChat Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SO_Post_Consent__c</fullName>
        <defaultValue>&apos;Unknown&apos;</defaultValue>
        <label>Post Consent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SO_JLR_Marketing_Preferences</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRC_Juror_Status__c</fullName>
        <description>World Car of the Year(WCOTY) or North American (NATOY) juror</description>
        <label>Juror Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NACTOY</fullName>
                </value>
                <value>
                    <fullName>WCOTY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRC_Office_Phone__c</fullName>
        <description>Office Phone Number</description>
        <label>Office Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PRC_Prime_Outlet__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contacts prime outlet</description>
        <label>Prime Outlet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRT_Has_Children__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does the person have any children?</description>
        <inlineHelpText>Does the person have any children?</inlineHelpText>
        <label>Has Children</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRT_Twitter_Link__c</fullName>
        <description>URL link to the person&apos;s Twitter profile</description>
        <inlineHelpText>URL link to the person&apos;s Twitter profile</inlineHelpText>
        <label>Twitter Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SO_Email_Consent__c</fullName>
        <defaultValue>&apos;Unknown&apos;</defaultValue>
        <label>Email Consent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SO_JLR_Marketing_Preferences</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Phone_Consent__c</fullName>
        <defaultValue>&apos;Unknown&apos;</defaultValue>
        <label>Phone Consent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SO_JLR_Marketing_Preferences</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Post_ZIP_Code__c</fullName>
        <label>Post/ZIP Code</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salutation_Other__c</fullName>
        <label>Salutation Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRT_Facebook_Link__c</fullName>
        <description>URL link to the person&apos;s Facebook profile</description>
        <inlineHelpText>URL link to the person&apos;s Facebook profile</inlineHelpText>
        <label>Facebook Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PRT_Primary_Brand__c</fullName>
        <label>Primary Brand</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PRT_Brand_Options</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Address_Line_3__c</fullName>
        <label>Address Line 3</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formula_for_report__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula for report</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRT_Instagram_Link__c</fullName>
        <description>URL link to the person&apos;s Instagram profile.</description>
        <inlineHelpText>URL link to the person&apos;s Instagram profile.</inlineHelpText>
        <label>Instagram Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PRT_Spouse_Details__c</fullName>
        <inlineHelpText>Record any important information about the spouse.</inlineHelpText>
        <label>Spouse Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SO_Blackbook_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PRC_Journalist_Tier__c</fullName>
        <description>Depicts a tiering system to denote the contact</description>
        <label>Journalist Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRC_Secondary_Email__c</fullName>
        <description>Secondary email for contact</description>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PRT_Weibo_Followers__c</fullName>
        <description>Number of followers this person has on Instragram. (This is not currently automatic)</description>
        <inlineHelpText>Number of followers this person has on Instragram. (This is not currently automatic)</inlineHelpText>
        <label>Weibo Followers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SO_Is_VIP_Blackbook__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is VIP Blackbook</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_SMS_Consent_date__c</fullName>
        <label>SMS Consent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SO_SMS_Consent_user__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SMS Consent User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PRT_Primary_Location__c</fullName>
        <description>Location person spends most of their time</description>
        <inlineHelpText>Location person spends most of their time</inlineHelpText>
        <label>Primary Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PRT_Locations</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRT_Profession_Other__c</fullName>
        <label>Profession Other</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRT_Sports_Interests__c</fullName>
        <label>Sports Interests</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PRT_Sports_Interests</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRT_WeChat_Followers__c</fullName>
        <description>Number of followers this person has on Instragram. (This is not currently automatic)</description>
        <inlineHelpText>Number of followers this person has on Instragram. (This is not currently automatic)</inlineHelpText>
        <label>WeChat Followers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SO_Client_Background__c</fullName>
        <label>Client Background</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SO_Post_Consent_date__c</fullName>
        <label>Post Consent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SO_Post_Consent_user__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Post Consent User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Service_Reminders__c</fullName>
        <label>Service Reminders</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SO_JLR_Marketing_Preferences</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRC_Contact_Full_Name__c</fullName>
        <formula>FirstName &amp; &quot; &quot; &amp;  LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRT_End_Contract_From__c</fullName>
        <description>Date from which the advocate will be marked as end of contracts</description>
        <label>End of Contract</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PRT_Twitter_Followers__c</fullName>
        <description>Number of followers this person has on twitter. (This is not currently automated)</description>
        <inlineHelpText>Number of followers this person has on twitter. (This is not currently automated)</inlineHelpText>
        <label>Twitter Followers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SO_Business_Interests__c</fullName>
        <label>Business Interests</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SO_Email_Consent_date__c</fullName>
        <label>Email Consent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SO_Email_Consent_user__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Email Consent User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Phone_Consent_date__c</fullName>
        <label>Phone Consent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SO_Phone_Consent_user__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Phone Consent User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_SMS_Consent_method__c</fullName>
        <label>SMS Consent Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SO_JLR_Preferences</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRT_Driving_Experience__c</fullName>
        <description>Level of Driving experience</description>
        <inlineHelpText>Low - limited road/off-road experience.  High - Race Track experience</inlineHelpText>
        <label>Driving Experience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PRT_Driving_Experience</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRT_Facebook_Followers__c</fullName>
        <description>Number of followers this person has on Facebook. (This is not currently automated)</description>
        <inlineHelpText>Number of followers this person has on Facebook. (This is not currently automated)</inlineHelpText>
        <label>Facebook Followers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRT_Other_Associations__c</fullName>
        <description>Associations with other brands</description>
        <inlineHelpText>Any other potentially relevant commercial relations the advocate has.</inlineHelpText>
        <label>Other Associations</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PRT_Secondary_Location__c</fullName>
        <description>An alternative location where the person spends a significant amount of time</description>
        <inlineHelpText>An alternative location where the person spends a significant amount of time</inlineHelpText>
        <label>Secondary Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PRT_Locations</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Magento_SMS_Consent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Magento SMS Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Post_Consent_Method__c</fullName>
        <label>Post Consent Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SO_JLR_Preferences</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRC_International_Phone__c</fullName>
        <description>Phone number for international contacts</description>
        <label>International Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PRC_Nearest_Press_Fleet__c</fullName>
        <description>Nearest location of press fleet</description>
        <label>Nearest Press Fleet City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRC_Press_Loan_Vehicles__c</fullName>
        <description>Car details</description>
        <label>Press Loan Vehicles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>E-PACE</fullName>
                </value>
                <value>
                    <fullName>F-PACE</fullName>
                </value>
                <value>
                    <fullName>I-PACE</fullName>
                </value>
                <value>
                    <fullName>F-TYPE</fullName>
                </value>
                <value>
                    <fullName>F-TYPE Project 7</fullName>
                </value>
                <value>
                    <fullName>S-TYPE</fullName>
                </value>
                <value>
                    <fullName>XE</fullName>
                </value>
                <value>
                    <fullName>XE SV Project 8</fullName>
                </value>
                <value>
                    <fullName>XF</fullName>
                </value>
                <value>
                    <fullName>XF Sportbrake</fullName>
                </value>
                <value>
                    <fullName>XJ</fullName>
                </value>
                <value>
                    <fullName>XJS</fullName>
                </value>
                <value>
                    <fullName>XK</fullName>
                </value>
                <value>
                    <fullName>X-TYPE</fullName>
                </value>
                <value>
                    <fullName>Defender</fullName>
                </value>
                <value>
                    <fullName>Discovery</fullName>
                </value>
                <value>
                    <fullName>Discovery Series I</fullName>
                </value>
                <value>
                    <fullName>Discovery Series II</fullName>
                </value>
                <value>
                    <fullName>Discovery Sport</fullName>
                </value>
                <value>
                    <fullName>Freelander</fullName>
                </value>
                <value>
                    <fullName>LR2</fullName>
                </value>
                <value>
                    <fullName>LR3</fullName>
                </value>
                <value>
                    <fullName>LR4</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Range Rover</fullName>
                </value>
                <value>
                    <fullName>Range Rover SV Coupe</fullName>
                </value>
                <value>
                    <fullName>Range Rover Classic</fullName>
                </value>
                <value>
                    <fullName>Range Rover Evoque</fullName>
                </value>
                <value>
                    <fullName>Range Rover Evoque Convertible</fullName>
                </value>
                <value>
                    <fullName>Range Rover Sport</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PRT_Instagram_Followers__c</fullName>
        <description>Number of followers this person has on Instagram. (This is not currently automatic)</description>
        <inlineHelpText>Number of followers this person has on Instagram. (This is not currently automatic)</inlineHelpText>
        <label>Instagram Followers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RTC_Market_Manager_Name__c</fullName>
        <label>Market Manager Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SO_Blackbook_Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SO_Blackbook_Work_Phone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SO_Classic_News_Updates__c</fullName>
        <label>Classic News &amp; Updates</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SO_JLR_Marketing_Preferences</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Email_Consent_Method__c</fullName>
        <label>Email Consent Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SO_JLR_Preferences</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Magento_Post_Consent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Magento Post Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Phone_Consent_Method__c</fullName>
        <label>Phone Consent Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SO_JLR_Preferences</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Keep_Me_Informed_Date__c</fullName>
        <label>Keep Me Informed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SO_Keep_Me_Informed_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Keep Me Informed User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SO_Magento_Email_Consent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Magento Email Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Magento_Phone_Consent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Magento Phone Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_State_Province_County__c</fullName>
        <label>State/Province/County</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRC_Number_of_Press_Loans__c</fullName>
        <description>Number of vehicles loaned to contact</description>
        <label>Number of Press Loans</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SO_Blackbook_Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SO_Classic_Consent_Method__c</fullName>
        <label>Classic News &amp; Updates Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SO_JLR_Preferences</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Service_Reminders_Date__c</fullName>
        <label>Service Reminders Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SO_Service_Reminders_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Reminders User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PRT_Is_Marked_End_Contract__c</fullName>
        <description>Boolean Indicator on weather the advocate is marked as no longer having any contracts</description>
        <formula>TODAY() &gt; PRT_End_Contract_From__c</formula>
        <label>Is End of Contracts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Keep_Me_Informed_Method__c</fullName>
        <label>Keep Me Informed Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SO_JLR_Preferences</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Keep_Me_Product_Informed__c</fullName>
        <label>Keep Me (Product KMI) Informed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SO_JLR_Marketing_Preferences</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SO_Service_Reminders_Method__c</fullName>
        <label>Service Reminders Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SO_JLR_Preferences</valueSetName>
        </valueSet>
    </fields>
</CustomObject>